--- a/_posts/2023-08-17-Entropy.md
+++ b/_posts/2023-08-17-Entropy.md
@@ -1,11 +1,13 @@
 ---
 layout: distill
 comments: false
-title: Boltzmann Waiting at a Bus Stop 
-description: 
+
+title: The Entropy of Waiting at a Bus Stop 
+
+description: Busses don't always arrive on time. Finding a distribution to model waiting times for these traunt busses sounds easy, but what do we do if we find out that mutiple models seem to describe the situation perfectly? Choosing among numerous distributions under a set of constraints, such as the average waiting time for a bus, is an integral part of scientific discovery. In this post, we derive one of the most well known principles for doing so, max-entropy methods. Using this principle, generic distributions under a set of constraints take the form of Boltzmann distributions, thoroughly-explored in statistical mechanics.
+
 
 date: 2023-08-17
-navbar_fixed: true
 
 authors:
   - name: Hagai Rappeport
@@ -13,7 +15,6 @@ authors:
       name: Hebrew University
   - name: Roy Friedman
 
-categories: 
 
 toc:
   - name: You're Waiting for a Bus
@@ -543,7 +544,7 @@ Unfortunately, as mentioned, finding an analytical form for the max-entropy is d
 
 One key feature of max-entropy is that it is relatively easy to find solutions. In the first place, the entropy is a _convex_ function. So, as long as the constraint defines a convex set<d-footnote>Verifying whether a constraint defines a convex set is a difficult problem in itself... However, when constraining the mean/variance, it actually is a convex set and a solution can be found.</d-footnote>, any off-the-shelf convex optimization algorithm can be used. For our problem we didn't even need to go that far. Since there is only one parameter, $\lambda$, that we need to find we just need to check a whole bunch of values until we land on the right one (tolerating some error).
 
-Honestly, the solution to the problem as we set up might not be totally interesting. Here are all of our models together (with numerical estimation):
+Honestly, the solution to the problem as we set out to solve might not be totally interesting. Here are all of our models together (with numerical estimation):
 
 <div class="fake-img l-page">
 <p align="center">
@@ -573,15 +574,16 @@ src="https://friedmanroy.github.io/assets/blog_figs/MaxEntropy/alternate_mean.pn
 
 # Wrapping Up
 
-Whew, that's a lot. We went through quite a ride.
+Whew, that was a lot. Quite a ride.
 
-Starting from a naive question, we went through quite some trouble to find the answer. The framework we derived is aptly called the max-entropy principle, and was first introduced by Jayne, back in 1957. In fact, most of the math in this post originates from even earlier sources. 
-
+Starting from a naive question, we went through a lot of trouble to find the answer. The framework we derived in this post is aptly called the max-entropy principle, and was first introduced by Jayne back in 1957. But, most of the math used in this post actually originates from even earlier sources. 
 Boltzmann (the same one from "Boltzmann distributions") originally came up with these types of distributions (1868!) in order to describe the statistics of whole systems of particles. This launched a new type of physics, statistical physics. Many of those earlier works can be abstracted, the same way we did here.
 
-Hopefully, even though there is a bit of math, you now know how model distributions under a set of constraints. 
+The same principles originally introduced for statistical physics are now used widely in machine learning and statistics. Since the described method is simply a way to find distributions that are generic while retaining known information, it is a recurring principle used for scientific discovery and modeling in a range of fields.
+
+Hopefully, even though a bit of math was involved, you now know how to model distributions under different constraints. 
 
 ## Outro
-It is now 25 minutes later. The bus arrived, a bit late but not too bad, and you got to the exam classroom just in time! You kept at it and found a general solution for the problem you originally posed. It took the whole bus ride, you originally wanted to go over some last-minute details, but maybe this is okay as well? 
+It is now 25 minutes later. The bus arrived, a bit late but not too bad, and you got to the exam just in time! You found a general solution for the problem you originally posed. It took the whole bus ride, you originally wanted to go over some last-minute details for the exam, but maybe this is okay as well? 
 
-Anyway, good luck on the exam and may all of your busses arrive on time!
+May all of your busses arrive on time!
