added constrained ent plot

--- a/_posts/2023-08-17-Entropy.md
+++ b/_posts/2023-08-17-Entropy.md
@@ -2,9 +2,9 @@
 layout: distill
 comments: false
 
-title: The Entropy of Waiting at a Bus Stop 
+title: Boltzmann Waiting at a Bus Stop 
 
-description: Busses don't always arrive on time. Finding a distribution to model waiting times for these traunt busses sounds easy, but what do we do if we find out that mutiple models seem to describe the situation perfectly? Choosing among numerous distributions under a set of constraints, such as the average waiting time for a bus, is an integral part of scientific discovery. In this post, we derive one of the most well known principles for doing so, max-entropy methods. Using this principle, generic distributions under a set of constraints take the form of Boltzmann distributions, thoroughly-explored in statistical mechanics.
+description: Busses don't always arrive on time. Finding the appropriate distribution to describe the amount of time spent waiting for a bus seems trivial but is actually quite difficult to pin down. In this post, we explore the principle of maximum entropy and show how it pops up in this deceptively simple sounding problem. This concrete settings serves as an example of an extremely powerful technique for statistical inference, with uses in virtually every scientific field.
 
 
 date: 2023-08-17
@@ -291,7 +291,17 @@ src="https://friedmanroy.github.io/assets/blog_figs/MaxEntropy/simplex_expectati
     Again , the entropy of the distributions in the simplex, but now we restrict our attention to a subset: the set of distributions with a particular mean. This set is contained within the red line, and the distribution inside this set that attains the maximal entropy is the one denoted by the star. 
 </div>
 
-So, if we want to find the distribution that maximizes the entropy whose mean is equal to a specific value, all we have to do is find the maximal entropy in the region depicted by the constraint!
+So, if we want to find the distribution that maximizes the entropy whose mean is equal to a specific value, all we have to do is find the maximal entropy in the region depicted by the constraint! 
+
+<div class="fake-img l-page">
+<p align="center">
+<img  
+src="https://friedmanroy.github.io/assets/blog_figs/MaxEntropy/entropy_mean_const.png"  style="display: inline-block; margin: 0 auto; ">
+</p>
+</div>
+<div class="caption">
+    The entropy of distributions in the region with a constrained mean. Again, the maximal value is represented by the star. Notice that since the constrained region is convex, and the entropy is a convex function, that the problem we need to solve is also, inevitably, convex.
+</div>
 
 In fact, using this we can maximize the entropy under _any_ constrain we want and with as many of them as we want, as long as there exists a distribution that satisfies all of the constraints. Different constraints will force us to search in different parts of the simplex, but in theory any constraint is valid.
 
@@ -577,9 +587,11 @@ src="https://friedmanroy.github.io/assets/blog_figs/MaxEntropy/alternate_mean.pn
 Whew, that was a lot. Quite a ride.
 
 Starting from a naive question, we went through a lot of trouble to find the answer. The framework we derived in this post is aptly called the max-entropy principle, and was first introduced by Jayne back in 1957. But, most of the math used in this post actually originates from even earlier sources. 
-Boltzmann (the same one from "Boltzmann distributions") originally came up with these types of distributions (1868!) in order to describe the statistics of whole systems of particles. This launched a new type of physics, statistical physics. Many of those earlier works can be abstracted, the same way we did here.
 
-The same principles originally introduced for statistical physics are now used widely in machine learning and statistics. Since the described method is simply a way to find distributions that are generic while retaining known information, it is a recurring principle used for scientific discovery and modeling in a range of fields.
+In the late 19th century, Boltzmann (and later Gibbs) revolutionized thermodynamics and gave us a much deeper understanding of the field by showing how its fundamental equations could be derived using probabilistic arguments. It turns out, as we just explored in this post, that the mathematical tools they developed are relevant for much more than molecules bumping into each other. 
+The concept of entropy started out as an abstract property of a thermodynamic system, later redefined by Boltzmann and Gibbs using their statistical physics framework, and eventually generalized by Shannon to a concept relevant to all of statistical inference. 
+
+The same principles originally introduced for statistical physics are now used widely in machine learning and statistics. Since the maximum entropy principle is simply a way to find distributions that are generic while retaining known information, it is a method used for scientific discovery and modeling in a range of fields.
 
 Hopefully, even though a bit of math was involved, you now know how to model distributions under different constraints. 
 
