--- a/_posts/2023-08-17-Entropy.md
+++ b/_posts/2023-08-17-Entropy.md
@@ -9,6 +9,8 @@ description: Busses don't always arrive on time. Finding the appropriate distrib
 
 date: 2023-08-17
 
+categories: information-theory distributions max-entropy statistics
+
 authors:
   - name: Hagai Rappeport
     affiliations:
