--- a/_posts/2022-11-01-Langevin.md
+++ b/_posts/2022-11-01-Langevin.md
@@ -11,7 +11,7 @@ authors:
 
 bibliography: 2022-11-01-Lagevin.bib
 
-categories: sampling MCMC ML
+categories: sampling MCMC machine-learning
 
 toc:
   - name: Problem Setting
