--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@article{friedman2024intriguing,
+      title={Intriguing Properties of Modern GANs}, 
+      author={Roy Friedman and Yair Weiss},
+      journal={arXiv preprint arXiv:2402.14098v1},
+      year={2024},
+      selected={true},
+      pdf={https://arxiv.org/pdf/2402.14098v1.pdf},
+      html={https://arxiv.org/html/2402.14098v1}
+}
+
+
 @article{HIglow2022friedman,
   title={HIGlow: Conditional Normalizing Flows for High-Fidelity HI Map Modeling},
   author={Friedman, Roy and Hassan, Sultan},
