--- a/_posts/2023-11-9-AIS.md
+++ b/_posts/2023-11-9-AIS.md
@@ -25,7 +25,7 @@ toc:
 include_appendix: true
 appendix: AIS_appendix.md
 ---
-Suppose you can't find your keys. You know you left them in your apartment somewhere, but don't remember where. Because this happens quite often you have a distribution over possible places you may have left your keys. You want to find out the probability that the keys are in a specific room of your apartment. Let's call this room $R$ - mathematically speaking, you want to calculate:
+Suppose you can't find your keys. You know you left them in your apartment somewhere, but don't remember where. This happens pretty often, so you have a keep note of the possible places you may have left your keys. You want to find out the probability that the keys are in a specific room of your apartment. Let's call this room $R$ - mathematically speaking, you want to calculate:
 $$
 \begin{equation}
 P\left(\text{keys}\in R\right)=\intop \mathbf{1}\left[x\in R\right]\cdot p_\text{keys}(x)dx
@@ -33,7 +33,7 @@ P\left(\text{keys}\in R\right)=\intop \mathbf{1}\left[x\in R\right]\cdot p_\text
 $$
 
 where $x\in\mathbb{R}^2$ is a two-dimensional coordinate where the keys may have been forgotten and $p_\text{keys}(x)$ is the PDF for the keys to be in the location $x$. The function $\mathbf{1}\left[x\in R\right]$ equals 1 if $x\in R$, otherwise it is 0.
-We can rewrite the above as:
+The above can be rewritten:
 
 $$
 \begin{equation}
@@ -41,16 +41,16 @@ P\left(\text{keys in }R\right) = \mathbb{E}_{x\sim p_\text{keys}}\left[\mathbf{1
 \end{equation}
 $$
 
-How can we calculate (or approximate) this expectation?
+So... how can we calculate (or approximate) this expectation? Which room is most probable to contain your lost keys?
 
-While this example is a bit silly, the problem can be abstracted to fit many situations. We are going to try and solve it using Annealed Importance Sampling (AIS, <d-cite key="AIS"></d-cite>). Honestly, in 2D there are probably many better ways to do this, but 2D allows for simple (intuitive!) visualizations, so let's stick with our somewhat wonky example. 
+While this example is a bit silly, the problem can be abstracted to fit many different situations. In this post, I'm going to show how it can be solved using Annealed Importance Sampling (AIS, <d-cite key="AIS"></d-cite>). Honestly speaking, when the data is 2-dimensional there are better ways to do this, but 2D allows for simple (intuitive!) visualizations, so let's stick with our somewhat wonky example. 
 
 <br>
 
 # **Problem Statement**
 <d-byline></d-byline>
 
-Let's generalize the problem at hand a bit.
+Let's define the problem again, just a bit more generally.
 
 We have some distribution over the domain $\mathcal{X}$:
 $$
@@ -59,9 +59,9 @@ p(x)= \frac{1}{Z}\tilde{p}(x)
 \end{equation}
 $$
 
-where for a given $x$ we know how to calculate $\tilde{p}(x)$. Unfortunately, we don't know the normalizing constant $Z$. 
+where for a given $x$ we know how to calculate $\tilde{p}(x)$. In this example, I'm going to assume the normalizing constant $Z$ isn't known. This setting matches a situation where you keep track of where the keys were left in the past and have a non-parametric formulation for the density $\tilde{p}(x)$, in which case $Z$ is hard to calculate.
 
-Lastly, there's some function $f:\mathcal{X}\rightarrow \mathbb{R}$ and we want (for whatever reason) to calculate:
+I will also assume that there's a function $f:\mathcal{X}\rightarrow \mathbb{R}$ and we want (for whatever reason) to calculate:
 
 $$
 \begin{equation}\label{eq:f-exp}
@@ -69,11 +69,13 @@ $$
 \end{equation}
 $$ 
 
-How can we do this? Is there a way to estimate $Z$ simultaneously?
+In our example, $p(x)=p_\text{keys}(x)$ and $f(x)=\mathbf{1}\left[x\in R\right]$. 
 
-### Difficulties with Simpler Methods
+The question is: how can we calculate $\overline{f}$? And as a secondary goal: is there a way to estimate $Z$ simultaneously, so we have access to the full (normalized) distribution?
 
-AIS is not a simple method, and there are approaches that are easier to understand. One of them is importance sampling (see [A.1](#a1-importance-sampling) for more details), where a simple distribution $q(x)$ is chosen and the expectation in equation \eqref{eq:f-exp} is approximated according to:
+### First Approach
+
+One way to find $\overline{f}$ and $Z$ is using _importance sampling_ (IS). In IS, a simple distribution $q(x)$ is chosen and the expectation in equation \eqref{eq:f-exp} is approximated according to (see [A.1](#a1-importance-sampling) for more details):
 
 $$
 \begin{equation}
@@ -81,10 +83,17 @@ $$
 \end{equation}
 $$
 
-Significantly, the normalization constant $Z$ _can_ be approximated using importance sampling: $Z=\mathbb{E}_q\left[\tilde{w}(x)\right]$.
-However, choosing a well specified distribution $q(x)$ for the importance weights $\tilde{w}(x)$ is difficult, and bad choices can lead to very bad approximations unless an enormous number of samples is used.
+The number $\tilde{w}(x)$ defines the relative importance of $x$ under our distribution of interest $\tilde{p}(x)$ and the simple distribution $q(x)$, which is why $\tilde{w}(x)$ are called _importance weights_.
 
-If we are solely interested in estimating the expectation in equation \eqref{eq:f-exp}, then another alternative is available - as long as we have some method for producing samples from $p(x)$ using only the unnormalized function $\tilde{p}(x)$. If that is the case, then $M$ points $x_1,\cdots,x_M$ can be sampled and used to approximate the expectation:
+IS also let's us approximate the normalization constant $Z$, using only the importance weights: $Z=\mathbb{E}_q\left[\tilde{w}(x)\right]\approx\frac{1}{N}\sum_{x_i\sim q}^N\tilde{w}(x_i)$.
+
+This seems to solve the problem we defined earlier. Of course, this post is about _annealed_ IS, not IS, so there's going to be a bit more to read.
+
+While incredibly simple and easy to use, IS is actually pretty hard to calibrate. Here, calibration means choosing a distribution $q(x)$ that is similar in some sense to $p(x)$. The best we can do, after all, is $q(x)=p(x)$. In that case, all of the importance weights will be equal to 1 and we would get a perfect approximation of $\overline{f}$ and $Z$. No, usually a much simpler distribution $q(x)$ is chosen, and if $q(x)\gg p(x)$ in some region of space then many samples from $q(x)$ will end up with very low importance weights $\tilde{w}(x)$. In such a situation, an enormous number of samples has to be used in order to get a sound approximation.
+
+### Another Way
+
+If we are solely interested in estimating the expectation in equation \eqref{eq:f-exp}, then another alternative is available - as long as we have some method for producing samples from $p(x)$ using only the unnormalized function $\tilde{p}(x)$. If that is the case, then $M$ points $x_1,\cdots,x_M$ can be sampled and used to get an unbiased approximation of the expectation:
 
 $$
 \begin{equation}
@@ -92,20 +101,26 @@ $$
 \end{equation}
 $$
 
-Typically, Markov chain Monte Carlo (MCMC) approaches are used, such as [Langevin dynamics](https://friedmanroy.github.io/blog/2022/Langevin/), in order to sample from the distribution. Many of these MCMC methods only require access to the gradient of the log of the distribution, $\nabla \log p(x)=\nabla \log \tilde{p}(x)$, so not knowing the normalization constant isn't a problem. However, this doesn't give us any estimate of $Z$ and many times it's also difficult to tune an MCMC sampler.
+To this end, Markov chain Monte Carlo (MCMC) methods can be used, such as [Langevin dynamics](https://friedmanroy.github.io/blog/2022/Langevin/), in order to sample from the distribution. Many of these MCMC methods only require access to the gradient of the log of the distribution, $\nabla \log p(x)=\nabla \log \tilde{p}(x)$, so not knowing the normalization constant isn't a problem. However, this doesn't give us any estimate of $Z$ and many times it's also difficult to tune an MCMC sampler.
 
+### Combining IS with MCMC
+
+At it's core, AIS is a way to combine the importance weights in IS with an MCMC approach. The idea is relatively simple: start with a sample from a simple distribution $q(x)$ and use MCMC iterations to get this sample closer to the distribution of interest $p(x)$. At the same time, we can also keep track of the relative importance of the sample, getting better calibrated importance weights.
+
+That's the main intuition behind AIS. Don't worry if it's still unclear, you have a bit more to read which I hope will clarify things.
 <br>
 # **Annealing the Importance Distribution**
 <d-byline></d-byline>
 
-The main intuition behind annealed importance sampling (or AIS) is the same as that of regular importance sampling. 
-As in importance sampling, we begin by choosing:
+As in IS, we begin by choosing:
 $$
 \begin{equation}
 q(x)=\frac{1}{Z_0}\tilde{q}(x)
 \end{equation}
 $$
-which is easy to sample from and whose normalization constant, $Z_0$, is known. AIS is an iterative algorithm - for $T$ iterations,  define:
+which is easy to sample from and whose normalization constant, $Z_0$, is known. 
+
+How are we going to get this sample closer to $p(x)$? We're going to define a series of intermediate distributions that gradually get closer and closer to $p(x)$. For now I'll define the $T$ intermediate distributions as:
 
 $$
 \begin{aligned}
@@ -114,9 +129,7 @@ $$
 \end{aligned}
 $$
 
-where $p(x)=\tilde{p}(x)/Z_T$ is the distribution we're actually interested in.
-
-Before continuing, let's parse what's going on here. Notice that $\beta(0)=0$ and $\beta(T)=1$, so:
+where $p(x)=\tilde{p}(x)/Z_T$ is the distribution we're actually interested in. Notice that $\beta(0)=0$ and $\beta(T)=1$, so:
 
 $$
 \begin{align}
@@ -125,9 +138,21 @@ $$
 \end{align}
 $$
 
-Furthermore, the values of $\beta(t)$ gradually move from 0 to 1, so for each $t$ the function $\pi_t(x)$ is an unnormalized distribution seating somewhere in between the two distributions $\tilde{q}(x)$ and $\tilde{p}(x)$. These intermediate distributions will allow a smooth transition from the simple distribution to the complex.
+Furthermore, the values of $\beta(t)$ gradually move from 0 to 1, so for each $t$ the function $\pi_t(x)$ is an unnormalized distribution somewhere between the two distributions $\tilde{q}(x)$ and $\tilde{p}(x)$. These intermediate distributions will allow a smooth transition from the simple distribution to the complex.
 
-Using MCMC approach for sampling from unnormalized distributions, the AIS algorithm proceeds as follows:
+If we use many iteration $T$, then the difference between each $\pi_t(x)$ and $\pi_{t+1}(x)$ will be very small, such that a sample from $\pi_t(x)$ is almost (but not quite) a valid sample from $\pi_{t+1}(x)$. Accordingly, we can use a relatively lightweight MCMC approach to get a sample from $\pi_{t+1}(x)$ starting from the $\pi_t(x)$ sample. And we can do this for all $t$, starting from the initial simple distribution $\pi_0(x)$. 
+
+At the same time, the importance weights for $\pi_{t+1}(x)$ given the $\pi_t(x)$ "proposal distribution" are $w_t=\frac{\pi_{t+1}(x)}{\pi_{t}(x)}$. We essentially want to get the importance weights for the whole chain $\pi_0(x)\rightarrow \pi_1(x)\rightarrow\cdots\rightarrow \pi_T(x)$, so we will multiply the time-based importance weights along the way. Ultimately, given a chain of $x_0,\cdots,x_{T-1}$ the importance weight of the whole chain will be given by:
+
+$$
+\begin{equation}
+w(x_0,\cdots,x_T)=Z_0\frac{\pi_1(x_0)}{\pi_0(x_0)}\cdot\frac{\pi_2(x_1)}{\pi_1(x_1)}\cdots \frac{\pi_T(x_{T-1})}{\pi_{T-1}(x_{T-1})}
+\end{equation}
+$$
+
+Notice that for all the intermediate $t$s that are not equal to 0 or $T$, the unnormalized distribution $\pi_t(x)$ always appears in the numerator _and_ denominator once, meaning that we don't need to estimate the normalizing coefficients $Z_t$ as they cancel out.  
+
+Putting all of this together, the AIS algorithm proceeds as follows (see appendix [A.2](#a2-ais-importance-weights**) for something a bit more formal):
 
 > 1. sample $x_0\sim q(x)$
 > 2. set $w_0=Z_0$
@@ -137,12 +162,16 @@ Using MCMC approach for sampling from unnormalized distributions, the AIS algori
 
 That's it. 
 
-Actually, in practice $\beta(t)$ is defined differently (not linearly), but let's ignore that for now. 
+### Small Notes
+
+For this post, I chose a particular ("standard") way to define the intermediate distributions $\pi_t(x)$. However, any set of intermediate distributions can be chosen, as long as the unnormalized form of each of them can be calculated and the change is gradual enough.
+
+Additionally to that, while $\pi_t(x)=\pi_0^{1-\beta(t)}(x)\pi_T^{\beta(t)}(x)$ is the definition most often used in practice, $\beta(t)$ is usually _not_ just linear in $t$. There are many options for the scheduling/annealing of $\beta(t)$, where different heuristics are taken into account in the definition of the schedule.
 
 ### Examples and Visualizations
 
 {% details Implementation details%}
-In all of the following examples, I'm Langevin dynamics or the Metropolis corrected version ([called MALA](https://en.wikipedia.org/wiki/Metropolis-adjusted_Langevin_algorithm)) with a single step as the MCMC algorithm between intermediate distributions. Moreover, I always used $q(x)=\mathcal{N}(x;\ 0, I)$ as the proposal distribution.
+In all of the following examples, I'm using Langevin dynamics or the Metropolis corrected version ([called MALA](https://en.wikipedia.org/wiki/Metropolis-adjusted_Langevin_algorithm)) with a single step as the MCMC algorithm between intermediate distributions. Moreover, I always used $q(x)=\mathcal{N}(x;\ 0, I)$ as the proposal distribution.
 
 To be honest, this would not work in any real application - a single Langevin step _doesn't_ sample from the distribution (you usually need many more steps). Luckily, for these visualizations a single step _was_ enough and conveys the message equally well, so I'd rather keep the simpler approach for now.
 {% enddetails %}
@@ -174,7 +203,7 @@ style="display: inline-block; margin: 0 auto; ">
     Figure 2: AIS from one Gaussian to a mixture of 3 Gaussians. When the proposal distribution is properly set, the annealing process ensures that all modes are properly "covered".
 </div>
 
-Of course, AIS can be used to model much more complex distributions:
+Of course, AIS can be used to sample from much more complex distributions:
 <div class="l-page">
 <p align="center">
 <img  
@@ -192,7 +221,7 @@ style="display: inline-block; margin: 0 auto; ">
 # **Importance Weights**
 <d-byline></d-byline>
 
-The mathematical trick of AIS is the way we defined the weights, $w_T$ (see [A.2](#a2-ais-importance-weights) for more details regarding the definition). Like in regular importance sampling, the weights are calculated such that:
+The mathematical trick of AIS is the way we defined the weights, $w_T$ (see [A.2](#a2-ais-importance-weights) for more details regarding the definition). Like in regular importance sampling, the weights are defined in such a way that:
 
 $$
 \begin{equation}
@@ -208,10 +237,10 @@ $$
 \end{equation}
 $$
 
-In fact, as defined $\hat{f}$  is an unbiased estimator for $\overline{f}$!
+In fact, this $\hat{f}$  is an unbiased estimator for $\overline{f}$!
 
 ### Calculations in Log-Space
-If you've ever dealt with probabilistic machine learning, you probably already know that multiplying (possible very small) probabilities is a recipe for disaster. This is also true here.
+If you've ever dealt with probabilistic machine learning, you probably already know that multiplying many (possible very small) probabilities is a recipe for disaster. This is also true here.
 
 Recall:
 
@@ -278,9 +307,9 @@ style="display: inline-block; margin: 0 auto; ">
     Figure 4: The floor plan with the density of finding the keys at each point in space (brighter is higher density). It's impossible to find the keys outside the house or in the walls, so the darkest blue in this image should be treated as essentially 0 density.
 </div>
 
-You're place is really big<d-footnote>Yeah, the floor design isn't that good... but I'm not an architect or anything, so it's fine.</d-footnote>!
+Your place is really big<d-footnote>Yeah, the floor design isn't that good... but I'm not an architect or anything, so it's fine.</d-footnote>!
 
-As you can see, there are rooms more and less likely to contain the keys and there are regions where it would be almost impossible to find the keys (all the places with the darkest shade of blue). Such places are, for instance, outside the house, in the walls or in the middle of a hallway.
+As you can see, there are rooms more likely and less likely to contain the keys and there are regions where it would be almost impossible to find the keys (all the places with the darkest shade of blue). Such places are, for instance, outside the house, in the walls or in the middle of a hallway.
 
 Conveniently, the rooms are numbered. We want to estimate, given this (unnormalized) PDF the probability that the keys are in a room, say room 7:
 
@@ -338,7 +367,7 @@ And there you have it! You should probably check in either room 9 or 6 and only 
 # **Practical Applications of AIS**
 <d-byline></d-byline>
 
-While I do believe the example I gave in this post was good for visualization and intuition, it's pretty silly (as I already mentioned). In 2D, rejection sampling probably achieves the same results with much less fuss.
+While I believe the example in this post is good for visualization and intuition, it's pretty silly (as I already mentioned). In 2D, rejection sampling probably achieves the same results with much less fuss.
 
 The more common use for AIS that I've seen around is as a method for _Bayesian inference_ (e.g. <d-cite key="wu2016"></d-cite>).
 
