--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,18 @@
 }
 
 
+@article{steinberg2023fully,
+  title={A fully 3D-printed versatile tumor-on-a-chip allows multi-drug screening and correlation with clinical outcomes for personalized medicine},
+  author={Steinberg, Eliana and Friedman, Roy and Goldstein, Yoel and Friedman, Nethanel and Beharier, Ofer and Demma, Jonathan Abraham and Zamir, Gideon and Hubert, Ayala and Benny, Ofra},
+  journal={Communications Biology},
+  volume={6},
+  number={1},
+  pages={1157},
+  year={2023},
+  publisher={Nature Publishing Group UK London},
+  pdf={https://www.nature.com/articles/s42003-023-05531-5}
+}
+
 @article{HIglow2022friedman,
   title={HIGlow: Conditional Normalizing Flows for High-Fidelity HI Map Modeling},
   author={Friedman, Roy and Hassan, Sultan},
