--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,7 +13,7 @@
 
 
 @article{steinberg2023fully,
-  title={A fully 3D-printed versatile tumor-on-a-chip allows multi-drug screening and correlation with clinical outcomes for personalized medicine},
+  title={A Fully 3D-Printed Versatile Tumor-on-a-Chip Allows Multi-Drug Screening and Correlation with Clinical Outcomes for Personalized Medicine},
   author={Steinberg, Eliana and Friedman, Roy and Goldstein, Yoel and Friedman, Nethanel and Beharier, Ofer and Demma, Jonathan Abraham and Zamir, Gideon and Hubert, Ayala and Benny, Ofra},
   journal={Communications Biology},
   volume={6},
