--- a/_posts/2024-08-20-gen0.md
+++ b/_posts/2024-08-20-gen0.md
@@ -17,7 +17,7 @@ include_appendix: false
 ---
 
 
-<span style="float:right"><a href="">A Linear Model →</a></span>
+<span style="float:right"><a href="https://friedmanroy.github.io/blog/2024/gen1/">A Linear Model →</a></span>
 <br>
 <d-byline></d-byline>
 
@@ -227,4 +227,4 @@ The purpose of this primer is to give a good foundation to learn about more comp
 
 <br>
 <d-byline></d-byline>
-<span style="float:right"><a href="">A Linear Model →</a></span>
+<span style="float:right"><a href="https://friedmanroy.github.io/blog/2024/gen1/">A Linear Model →</a></span>
