--- a/_posts/2024-08-20-gen1.md
+++ b/_posts/2024-08-20-gen1.md
@@ -19,7 +19,7 @@ toc:
 include_appendix: false
 ---
 
-<span style='float:left'><a href="">← What is a Generative Model?</a></span><span style="float:right"><a href="">Variational Methods →</a></span>
+<span style='float:left'><a href="https://friedmanroy.github.io/blog/2024/gen0/">← What is a Generative Model?</a></span><span style="float:right"><a href="https://friedmanroy.github.io/blog/2024/gen2/">Variational Methods →</a></span>
 <br>
 <d-byline></d-byline>
 
@@ -278,5 +278,5 @@ So, where do we proceed? The obvious next step after a linear model is one that 
 <br>
 <d-byline></d-byline>
 
-<span style='float:left'><a href="">← What is a Generative Model?</a></span><span style="float:right"><a href="">Variational Methods →</a></span>
+<span style='float:left'><a href="https://friedmanroy.github.io/blog/2024/gen0/">← What is a Generative Model?</a></span><span style="float:right"><a href="https://friedmanroy.github.io/blog/2024/gen2/">Variational Methods →</a></span>
 
