--- a/_posts/2024-08-20-gen2.md
+++ b/_posts/2024-08-20-gen2.md
@@ -16,7 +16,7 @@ toc:
   - name: Conclusion
 include_appendix: false
 ---
-<span style='float:left'><a href="">← A Linear Model</a></span><span style="float:right"><a href="">Normalizing Flows →</a></span>
+<span style='float:left'><a href="https://friedmanroy.github.io/blog/2024/gen1/">← A Linear Model</a></span><span style="float:right"><a href="https://friedmanroy.github.io/blog/2024/gen3/">Normalizing Flows →</a></span>
 <br>
 <d-byline></d-byline>
 
@@ -246,5 +246,5 @@ While VAEs are kind of unpopular at the moment, they are still a very good intro
 <br>
 <d-byline></d-byline>
 
-<span style='float:left'><a href="">← A Linear Model</a></span><span style="float:right"><a href="">Normalizing Flows →</a></span>
+<span style='float:left'><a href="https://friedmanroy.github.io/blog/2024/gen1/">← A Linear Model</a></span><span style="float:right"><a href="https://friedmanroy.github.io/blog/2024/gen3/">Normalizing Flows →</a></span>
 
