--- a/_posts/2024-08-21-gen3.md
+++ b/_posts/2024-08-21-gen3.md
@@ -16,7 +16,7 @@ toc:
   - name: Problems with Normalizing and Continuous Flows
 include_appendix: false
 ---
-<span style='float:left'><a href="">← Variation Methods</a></span><span style="float:right"><a href="">DDPM →</a></span>
+<span style='float:left'><a href="https://friedmanroy.github.io/blog/2024/gen2/">← Variation Methods</a></span><span style="float:right"><a href="https://friedmanroy.github.io/blog/2024/gen4/">DDPM →</a></span>
 <br>
 <d-byline></d-byline>
 
@@ -253,5 +253,5 @@ Still, normalizing flows are quite limiting. The transformations are either very
 <br>
 <d-byline></d-byline>
 
-<span style='float:left'><a href="">← Variation Methods</a></span><span style="float:right"><a href="">DDPM →</a></span>
+<span style='float:left'><a href="https://friedmanroy.github.io/blog/2024/gen2/">← Variation Methods</a></span><span style="float:right"><a href="https://friedmanroy.github.io/blog/2024/gen4/">DDPM →</a></span>
 
