--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@article{friedman2024control,
+      title={Control+Shift: Generating Controllable Distribution Shifts}, 
+      author={Roy Friedman and Rhea Chowers},
+      journal={ECCV2024, Synthetic Data for Computer Vision Workshop},
+      year={2024},
+      selected={true},
+      url={https://arxiv.org/abs/2409.07940}, 
+      pdf={https://arxiv.org/abs/2409.07940.pdf}
+}
+
 @article{friedman2024intriguing,
       title={Intriguing Properties of Modern GANs}, 
       author={Roy Friedman and Yair Weiss},
