--- a/_posts/2024-08-21-gen4.md
+++ b/_posts/2024-08-21-gen4.md
@@ -1,7 +1,7 @@
 ---
 layout: distill
 comments: false
-title: Generative Models 4 - Denoising Diffusion Probabilistic Models (DDPM)
+title: Generative Models 4 - Denoising Diffusion Probabilistic Models
 description: 
 authors:
   - name: Roy Friedman
