--- a/_posts/2024-08-21-gen4.md
+++ b/_posts/2024-08-21-gen4.md
@@ -287,7 +287,7 @@ I\sigma_{t}^{2} & I\bar{\sigma}_{t-1}^{2}
 \end{equation}
 $$
 
-Using identities for conditionals of jointly Gaussian distributions<d-footnote>See my <a href="https://friedmanroy.github.io/BML/3_gaussians/\#conditional-distribution-of-a-gaussian">BML notes for this</a></d-footnote>,
+Using identities for conditionals of jointly Gaussian distributions<d-footnote>See my <a href="https://friedmanroy.github.io/BML/3_gaussians">BML notes for this</a></d-footnote>,
 we have:
 
 $$
