--- a/_posts/2024-08-20-gen2.md
+++ b/_posts/2024-08-20-gen2.md
@@ -225,7 +225,7 @@ L\left(\theta,\phi\right)=\underbrace{\| x-G_{\theta}\left(z\right)\| ^{2}}_{\te
 \end{equation}
 $$
 
-If we use a different value for $\beta$, we recover something called $\beta$-VAEs (it's kind of silly that it has a different name):
+If we use a different value for $\beta$, we recover something called $\beta$-VAEs:
 
 $$
 \begin{equation}
