--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,26 @@
 ---
 ---
 
+@article{friedman2025SPE,
+      title={Characterizing Nonlinear Dynamics via Smooth Prototype Equivalences}, 
+      author={Roy Friedman, Noa Moriel, Matthew Ricci, Guy Pelc, Yair Weiss and Mor Nitzan},
+      journal={Under review},
+      year={2025},
+      selected={true},
+      url={https://arxiv.org/abs/2503.10336}, 
+      pdf={https://arxiv.org/abs/2503.10336.pdf}
+}
+
+@article{erez2025spatial,
+      title={Neighborhood-Informed Positional Information for Precise Cell Identity Specification}, 
+      author={Michal Erez, Roy Friedman and Mor Nitzan},
+      journal={Under review},
+      year={2025},
+      selected={false},
+      url={https://www.biorxiv.org/content/10.1101/2025.03.17.643609v1}, 
+      pdf={https://www.biorxiv.org/content/10.1101/2025.03.17.643609v1}
+}
+
 @article{friedman2024control,
       title={Control+Shift: Generating Controllable Distribution Shifts}, 
       author={Roy Friedman and Rhea Chowers},
