--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,21 +3,18 @@
 
 @article{friedman2025SPE,
       title={Characterizing Nonlinear Dynamics via Smooth Prototype Equivalences}, 
-      author={Roy Friedman, Noa Moriel, Matthew Ricci, Guy Pelc, Yair Weiss and Mor Nitzan},
+      author={Roy Friedman, Noa Moriel, Matthew Ricci, Guy Pelc, Yair Weiss, and Mor Nitzan},
       journal={Under review},
       year={2025},
       selected={true},
-      url={https://arxiv.org/abs/2503.10336}, 
       pdf={https://arxiv.org/abs/2503.10336.pdf}
 }
 
 @article{erez2025spatial,
       title={Neighborhood-Informed Positional Information for Precise Cell Identity Specification}, 
-      author={Michal Erez, Roy Friedman and Mor Nitzan},
+      author={Michal Erez, Roy Friedman, and Mor Nitzan},
       journal={Under review},
       year={2025},
-      selected={false},
-      url={https://www.biorxiv.org/content/10.1101/2025.03.17.643609v1}, 
       pdf={https://www.biorxiv.org/content/10.1101/2025.03.17.643609v1}
 }
 
@@ -34,11 +31,10 @@
 @article{friedman2024intriguing,
       title={Intriguing Properties of Modern GANs}, 
       author={Roy Friedman and Yair Weiss},
-      journal={arXiv preprint arXiv:2402.14098v1},
+      journal={CVPR 2025, GMCV Workshop},
       year={2024},
       selected={true},
       pdf={https://arxiv.org/pdf/2402.14098v1.pdf},
-      html={https://arxiv.org/html/2402.14098v1}
 }
 
 
