--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{friedman2025SPE,
       title={Characterizing Nonlinear Dynamics via Smooth Prototype Equivalences}, 
-      author={Roy Friedman, Noa Moriel, Matthew Ricci, Guy Pelc, Yair Weiss, and Mor Nitzan},
+      author={Friedman, Roy and Moriel, Noa and Ricci, Matthew and Pelc,Guy and Weiss, Yair and Nitzan, More},
       journal={Under review},
       year={2025},
       selected={true},
@@ -12,29 +12,29 @@
 
 @article{erez2025spatial,
       title={Neighborhood-Informed Positional Information for Precise Cell Identity Specification}, 
-      author={Michal Erez, Roy Friedman, and Mor Nitzan},
+      author={Erez*, Michal and Friedman*, Roy and Nitzan, More},
       journal={Under review},
       year={2025},
       pdf={https://www.biorxiv.org/content/10.1101/2025.03.17.643609v1}
 }
 
+@article{friedman2024intriguing,
+      title={Intriguing Properties of Modern GANs}, 
+      author={Roy Friedman and Yair Weiss},
+      journal={CVPR, GMCV Workshop},
+      year={2025},
+      selected={true},
+      pdf={https://arxiv.org/pdf/2402.14098v1.pdf},
+}
+
 @article{friedman2024control,
       title={Control+Shift: Generating Controllable Distribution Shifts}, 
       author={Roy Friedman and Rhea Chowers},
-      journal={ECCV2024, Synthetic Data for Computer Vision Workshop},
+      journal={ECCV, Synthetic Data for Computer Vision Workshop},
       year={2024},
       selected={true},
       url={https://arxiv.org/abs/2409.07940}, 
       pdf={https://arxiv.org/abs/2409.07940.pdf}
-}
-
-@article{friedman2024intriguing,
-      title={Intriguing Properties of Modern GANs}, 
-      author={Roy Friedman and Yair Weiss},
-      journal={CVPR 2025, GMCV Workshop},
-      year={2024},
-      selected={true},
-      pdf={https://arxiv.org/pdf/2402.14098v1.pdf},
 }
 
 
@@ -53,7 +53,7 @@
 @article{HIglow2022friedman,
   title={HIGlow: Conditional Normalizing Flows for High-Fidelity HI Map Modeling},
   author={Friedman, Roy and Hassan, Sultan},
-  journal={Machine Learning and the Physical Sciences Workshop, Conference on Neural Information Processing Systems},
+  journal={NeurIPS, Machine Learning and the Physical Sciences Workshop},
   year={2022},
   selected={true},
   doi = {10.48550/ARXIV.2211.12724},
