--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,12 +19,12 @@
 }
 
 @article{friedman2024intriguing,
-      title={Intriguing Properties of Modern GANs}, 
+      title={How Useful is the Density Learned by GANs for Computer Vision?}, 
       author={Roy Friedman and Yair Weiss},
       journal={CVPR, GMCV Workshop},
       year={2025},
       selected={true},
-      pdf={https://arxiv.org/pdf/2402.14098v1.pdf},
+      pdf={https://generative-vision.github.io/workshop-CVPR-25/papers/11.pdf},
 }
 
 @article{friedman2024control,
