--- a/_posts/2024-08-20-gen2.md
+++ b/_posts/2024-08-20-gen2.md
@@ -52,7 +52,7 @@ Finding a lower bound for the log-likelihood sounds kind of difficult, but follo
 $$
 \begin{align}
 \log p_{\theta}\left(x\right) & =\log\intop p_{\theta}\left(x,z\right)dz\\
- & =\log\intop p_{\theta}\left(x,z\right)\frac{q_{\phi}\left(z\vert x\right)}{q_{\phi}\left(z\vert x\right)}q_{\phi}\left(z\vert x\right)dz\\
+ & =\log\intop p_{\theta}\left(x,z\right)\frac{q_{\phi}\left(z\vert x\right)}{q_{\phi}\left(z\vert x\right)}dz\\
  & =\log\mathbb{E}_{q_{\phi}}\left[\frac{p_{\theta}\left(x,z\right)}{q_{\phi}\left(z\vert x\right)}\right]\\
  & \ge\mathbb{E}_{q_{\phi}}\left[\log p_{\theta}\left(x\vert z\right)+\log\frac{p\left(z\right)}{q_{\phi}\left(z\vert x\right)}\right]\\
  & =\mathbb{E}_{q_{\phi}}\left[\log p_{\theta}\left(x\vert z\right)\right]-D_{\text{KL}}\left(q_{\phi}\left(z\vert x\right)\vert \vert p\left(z\right)\right)\\
